<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="button_true">true</string>
    <string name="button_false">false</string>
    <string name="next_question">Next</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorrect</string>
    <string name="start_list">You`re already at the start of the list.</string>
    <string name="answer_question">You`re already answered this question.</string>
    <string name="previous_question">previous</string>
</resources>